# JACKLEE

./: myscript.py
myapp/: pyproject.toml
mylib/: pyproject.toml
mylib/src/mylib/: __init__.py
python/OLD/GBF/OLD/: imgidentity.py  three - old.py  three _ old2.py
python/OLD/GBF/OLD/NEW/: auto2++.py
python/OLD/GBF/OLD/opencv/人臉辨識/: opencv_dnns.py
python/OLD/GBF/OLD/test/: test.py
python/OLD/GBF/OLD/其他/: auto2++.py
python/OLD/GBF/OLD/原型/: auto.py  auto2.py  prototype.py
python/OLD/GBF/OLD/古戰場/: auto3++.py
python/OLD/GBF/OLD/四象/: auto3++.py
python/OLD/GBF/OLD/活動/: 1.py  auto2++.py
python/OLD/GBF/OLD/特殊星本/: auto++.py
python/OLD/GBF/OLD/轉世/: auto2++.py  auto3++.py
python/OLD/GBF/OLD/轉世/三格/: auto3++.py
python/OLD/GBF/OLD/轉世/五格/: auto2++.py
python/OLD/GBF/OLD/轉世/舊版/三格闇(空から降る百の怪魔)/: auto3++.py
python/OLD/GBF/OLD/轉世/舊版/水文書(気高き三又鉾の達人)/: auto2++.py
python/gbfauto/NEW/土新轉世/: three.py
python/gbfauto/NEW/水新轉世/: three.py
python/gbfauto/NEW/神滅/: godd.py
python/test/: GPUTRAIN.py  captcha_full.py
