[project]
name = "mylib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "z0916733685", email = "z0916733685@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
